# Robotics

./: README.md
Core/SHADCDevice/: ADCDevice.cpp  ADCDevice.hpp  CMakeLists.txt
Prototypes/CSTest/CsTest/: CsTest.sln
Prototypes/CSTest/CsTest/CsTest/: Buzzer.cs  Chassis.cs  ComponentBase.cs  CsTest.csproj  Drivetrain.cs  Program.cs  UltraSonicSensor.cs  Wheel.cs
Prototypes/MotorTestCpp/: CMakeLists.txt  main.cpp
Prototypes/SHADCDevice/: ADCDevice.cpp  ADCDevice.hpp  CMakeLists.txt
Prototypes/UltrasonicSensor/: CMakeLists.txt  main.c  main.cpp
Prototypes/UltrasonicSensorCpp/: CMakeLists.txt  main.cpp
Prototypes/UltrasonicSensorCppPi5/: CMakeLists.txt  main.cpp
